layout issues

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -193,6 +193,7 @@ body {
 #mainmenu {
   border: 1px solid #52A79B;
   border-width: 0 0 1px 0;
+  width: 100%;
 }
 
 #mainmenu img {
